# budget_meal_planner-main-2

./: .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE  README.md  poetry.toml  pyproject.toml
.github/workflows/: cicd.yaml
configs/: config.yaml  config_bedrock.yaml  config_groq.yaml  config_huggingface.yaml  config_ollama.yaml  config_openai.yaml
notebooks/: document_transformer.ipynb  eda_recipes.ipynb  groq_recepie.ipynb  groq_recepie_original.ipynb  huggingface_model_sagemaker_deployment_template.ipynb  ocr.ipynb  pdf_to_Chunks.ipynb  product_grouping.ipynb
prompt_templates/: extract_product.json  extract_product_v1.json  recommend_recipes.json
src/: common.py  config.py  llm_model.py  logger.py  main.py  model_factory.py  prompt_manager.py  utils.py
src/flyer_service/: config.properties  image_to_text.py  llm_image_model.py  main.py  pdf_to_image.py
src/recipe_service/: config.properties  langgraph_adaptive_rag_local.py  llm_rag_model.py  main.py  recommend_recipes.py  select_products.py  vector_database.py
src/recommendation_app/: app.py
tests/: test_prompt_manager.py
